--- a/package.json
+++ b/package.json
@@ -7,7 +7,18 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install",
+    "lint": "eslint src",
+    "prettier:fix": "prettier --write",
+    "prettier:check": "prettier --check ."
+  },
+
+  "lint-stage":{
+    "src/*.{ts,tsx}":[
+      "yarn prettier:fix",
+      "yarn lint"
+    ]
   },
   "dependencies": {
     "@emotion/css": "^11.5.0",
@@ -27,7 +38,9 @@
     "@types/react": "^17.0.34",
     "babel-loader": "^8.2.3",
     "babel-plugin-macros": "^3.1.0",
-    "prettier": "^2.3.1",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
+    "prettier": "^2.5.0",
     "tailwindcss": "^2.2.19",
     "twin.macro": "^2.8.1",
     "typescript": "^4.4.4"
