--- a/package.json
+++ b/package.json
@@ -13,13 +13,6 @@
     "prettier:fix": "prettier --write",
     "prettier:check": "prettier --check ."
   },
-
-  "lint-stage":{
-    "src/*.{ts,tsx}":[
-      "yarn prettier:fix",
-      "yarn lint"
-    ]
-  },
   "dependencies": {
     "@emotion/css": "^11.5.0",
     "@emotion/react": "^11.5.0",
@@ -44,5 +37,11 @@
     "tailwindcss": "^2.2.19",
     "twin.macro": "^2.8.1",
     "typescript": "^4.4.4"
+  },
+  "lint-staged": {
+    "src/*.{ts,tsx}": [
+      "yarn prettier:fix",
+      "yarn lint"
+    ]
   }
 }
