--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "eslint": "^8.3.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -37,11 +38,5 @@
     "tailwindcss": "^2.2.19",
     "twin.macro": "^2.8.1",
     "typescript": "^4.4.4"
-  },
-  "lint-staged": {
-    "src/*.{ts,tsx}": [
-      "yarn prettier:fix",
-      "yarn lint"
-    ]
   }
 }
