--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "eslint": "^8.3.0",
+    "immer": "^9.0.7",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
+    "zustand": "^3.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
