--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
+    "react-textarea-autosize": "^8.3.3",
     "zustand": "^3.6.8"
   },
   "devDependencies": {
