--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
     "@emotion/react": "^11.5.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@types/cookie": "^0.4.1",
+    "axios": "^0.24.0",
+    "cookie": "^0.4.1",
+    "cookies": "^0.8.0",
+    "cookies-next": "^2.0.3",
     "eslint": "^8.3.0",
     "immer": "^9.0.7",
     "next": "latest",
+    "next-auth": "^4.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
+    "react-query": "^3.34.7",
     "react-textarea-autosize": "^8.3.3",
     "zustand": "^3.6.8"
   },
