--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "prepare": "husky install",
     "lint": "eslint src",
     "prettier:fix": "prettier --write",
-    "prettier:check": "prettier --check ."
+    "prettier:check": "prettier --check .",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run",
+    "e2e": "start-server-and-test dev http://localhost:3000 cypress",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless"
   },
   "dependencies": {
     "@emotion/css": "^11.5.0",
@@ -43,6 +47,7 @@
     "@types/react": "^17.0.34",
     "babel-loader": "^8.2.3",
     "babel-plugin-macros": "^3.1.0",
+    "cypress": "^9.3.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "prettier": "^2.5.0",
